--- a/Pages/Cadastro.razor
+++ b/Pages/Cadastro.razor
@@ -8,19 +8,33 @@
     <br>
     <form> 
 
-        <div class="form-group"style="margin-top:50px;">
+        <div class="form-group"style="margin-top:25px;">
             <div class="col-md-6 offset-md-3">
-                <label > E-mail </label>
-                <input type="text" name="login" class="form-control " placeholder="E-mail" required="" >    
+                <label > Nome </label>
+                <input type="text" name="name" class="form-control " placeholder="Nome" required="" >    
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
                 <label> Senha </label>  
-                <input type="password" name="rg" class="form-control" placeholder="Senha" required="" >
+                <input type="password" name="password" class="form-control" placeholder="Senha" required="" >
             </div>
-        </div>      
+        </div> 
+
+        <div class="form-group">
+            <div class="col-md-6 offset-md-3">
+                <label > E-mail </label>
+                <input type="text" name="email" class="form-control " placeholder="E-mail" required="" >    
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-6 offset-md-3">
+                <label > CPF </label>
+                <input type="text" name="cpf" class="form-control " placeholder="CPF" required="" >    
+            </div>
+        </div>     
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
