--- a/Pages/Portofolio.razor
+++ b/Pages/Portofolio.razor
@@ -1,34 +1,24 @@
-@page "/cadastro"
+@page "/portfolio"
 
 <div class="form-group d-flex justify-content-center">
 
 <div class="container">
     <br>
-    <h1 class="display"style="text-align:center">Cadastro</h1>
+    <h1 class="display"style="text-align:center">Portfolio</h1>
     <br>
     <form> 
 
-        <div class="form-group"style="margin-top:50px;">
+    <div class="col-md-6 offset-md-3">
+      <label for="exampleInputFile"style="text-align:center">Faça o Upload do seu Arquivo!</label>
+      <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+    </div>
+    <div class="col-md-6 offset-md-3" style="margin-top:25px;">
+      <textarea class="form-control" id="exampleTextarea" rows="5" placeholder="Digite a descrição de seu Porfolio!"></textarea>
+    </div>    
+    <br>
+    <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <label > E-mail </label>
-                <input type="text" name="login" class="form-control " placeholder="E-mail" required="" >    
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-6 offset-md-3">
-                <label> Senha </label>  
-                <input type="password" name="rg" class="form-control" placeholder="Senha" required="" >
-            </div>
-        </div>      
-
-        <div class="form-group">
-            <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-outline-primary">Cadastrar</button>
-                <div class="form-check">
-                    <br>
-                    <label > <input class="form-check-input" type="checkbox" value="" > Lembre-me  </label> 
-                </div>
+                <button type="button" class="btn btn-outline-primary" style="position:absolute">Enviar</button>
             </div>
         </div>
     </form> 
