--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Cadastro
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="portfolio">
+                <span class="oi oi-plus" aria-hidden="true"></span> Portfolio
+            </NavLink>
+        </li>
     </ul>
 </div>
 
