--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -23,13 +23,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="cadastro">
-                <span class="oi oi-plus" aria-hidden="true"></span> Cadastro
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="portfolio">
-                <span class="oi oi-plus" aria-hidden="true"></span> Portfolio
+            <NavLink class="nav-link" href="cooperado">
+                <span class="oi oi-plus" aria-hidden="true"></span> Cooperado
             </NavLink>
         </li>
     </ul>
