--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using CooperativaXZ.Data
+@using CooperativaXZ
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
