--- a/Pages/Cooperado/Cooperado.razor
+++ b/Pages/Cooperado/Cooperado.razor
@@ -17,6 +17,11 @@
              Portfolio
             </NavLink>
     </div>
+    <div class="nav-item px-3">
+            <NavLink class="nav-link" href="financeiro">
+             Informações Financeiras
+            </NavLink>
+    </div>
     </form> 
 </div>
 </div>
