--- a/Pages/Usuario/LoginUser.razor
+++ b/Pages/Usuario/LoginUser.razor
@@ -1,3 +1,33 @@
 @page "/login"
 
-<h1>Counter</h1>
+<div class="form-group d-flex justify-content-center">
+
+<div class="container">
+    <br>
+    <h1 class="display"style="text-align:center">Login</h1>
+    <br>
+    <form> 
+
+        <div class="form-group"style="margin-top:25px;">
+            <div class="col-md-6 offset-md-3">
+                <label > E-mail </label>
+                <input type="text" name="e-mail" class="form-control " placeholder="E-mail" required="Favor preencher o campo E-mail">    
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-6 offset-md-3">
+                <label> Senha </label>  
+                <input type="password" name="senha" class="form-control" placeholder="Senha" required="Favor preencer o campo Senha">
+            </div>
+        </div> 
+
+        <div class="form-group">
+            <div class="col-md-6 offset-md-3">
+                <button type="button" class="btn btn-outline-primary">Entrar</button>
+               
+            </div>
+        </div>
+    </form> 
+</div>
+</div>
