--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,32 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div class="jumbotron">
+  <h1 class="display-3" style="text-align:center">COOPERATIVA XZ</h1>
+  
+  <hr class="my-4">
+  <p class="lead">Este é nosso TCC</p>
+</div>
 
-Welcome to your new app.
+ <div class="section-tout">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-4 col-sm-6">
+            <h4><i class="oi oi-list-rich"></i> SOBRE NÓS</h4>
+            <hr class="my-4">
+            <p>Este é o nosso TCC</p>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <h4><i class="oi oi-list-rich"></i> COOPERATIVISMO</h4>
+            <hr class="my-4">
+             <p>Esté o nosso TCC</p>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <h4><i class="oi oi-list-rich"></i> CONTATO</h4>
+            <hr class="my-4">
+            <p>Esté o nosso TCC</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
