Adição Telas de Projeto

--- a/Pages/Cooperado/Cooperado.razor
+++ b/Pages/Cooperado/Cooperado.razor
@@ -22,6 +22,21 @@
              Informações Financeiras
             </NavLink>
     </div>
+    <div class="nav-item px-3">
+            <NavLink class="nav-link" href="comentProjeto">
+             Comentário do Projeto
+            </NavLink>
+    </div>
+    <div class="nav-item px-3">
+            <NavLink class="nav-link" href="cadastroProjeto">
+             Cadastro de Projeto
+            </NavLink>
+    </div>
+     <div class="nav-item px-3">
+            <NavLink class="nav-link" href="analiseProjeto">
+             Análise de Projeto
+            </NavLink>
+    </div>
     </form> 
 </div>
 </div>
