--- a/Pages/Cooperado/Cooperado.razor
+++ b/Pages/Cooperado/Cooperado.razor
@@ -7,35 +7,39 @@
     <h1 class="display"style="text-align:center">Cooperado</h1>
     <br>
     <form> 
+<div class="NavMenuCssClass">
+    <ul class="nav flex-column">
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="cadastro">
-             Cadastro
+             <span class="oi oi-plus" aria-hidden="true" style="margin-right:10px;"> </span>  PortfolioCadastro
             </NavLink>
     </div>
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="portfolio">
-             Portfolio
+             <span class="oi oi-book" aria-hidden="true" style="margin-right:10px;"> </span>  Portfolio
             </NavLink>
     </div>
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="financeiro">
-             Informações Financeiras
+             <span class="oi oi-dollar" aria-hidden="true" style="margin-right:10px;"> </span>  Informações Financeiras
             </NavLink>
     </div>
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="comentProjeto">
-             Comentário do Projeto
+            <span class="oi oi-pencil" aria-hidden="true" style="margin-right:10px;"> </span>  Comentário do Projeto
             </NavLink>
     </div>
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="cadastroProjeto">
-             Cadastro de Projeto
+            <span class="oi oi-project" aria-hidden="true" style="margin-right:10px;"> </span>  Cadastro de Projeto
             </NavLink>
     </div>
      <div class="nav-item px-3">
             <NavLink class="nav-link" href="analiseProjeto">
-             Análise de Projeto
+             <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Análise de Projeto
             </NavLink>
+    </div>
+    </ul>
     </div>
     </form> 
 </div>
