--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="login">
-                <span class="oi oi-plus" aria-hidden="true"></span> Login
+                <span class="oi oi-account-login" aria-hidden="true"></span> Login
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="cooperado">
-                <span class="oi oi-plus" aria-hidden="true"></span> Cooperado
+                <span class="oi oi-person" aria-hidden="true"></span> Cooperado
             </NavLink>
         </li>
     </ul>
