--- a/Pages/Cooperado/CadastroProjeto.razor
+++ b/Pages/Cooperado/CadastroProjeto.razor
@@ -53,7 +53,7 @@
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-outline-primary">Cadastrar</button>
+                <button type="button" class="btn btn-info">Cadastrar</button>
                
             </div>
         </div>
