--- a/Pages/Cooperado/AnaliseProjeto.razor
+++ b/Pages/Cooperado/AnaliseProjeto.razor
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-outline-primary" style="position:absolute">Enviar</button>
+                <button type="button" class="btn btn-info" style="position:absolute">Enviar</button>
             </div>
         </div>
     </form> 
