--- a/Pages/Cooperado/Cooperado.razor
+++ b/Pages/Cooperado/Cooperado.razor
@@ -39,6 +39,11 @@
              <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Análise de Projeto
             </NavLink>
     </div>
+    <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ficha">
+             <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Ficha de Cadastro
+            </NavLink>
+    </div>
     </ul>
     </div>
     </form> 
