--- a/Pages/Cooperado/Financeiro.razor
+++ b/Pages/Cooperado/Financeiro.razor
@@ -38,7 +38,7 @@
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-outline-primary">Enviar</button>
+                <button type="button" class="btn btn-info">Enviar</button>
                
             </div>
         </div>
