--- a/Pages/Cooperado/Portofolio.razor
+++ b/Pages/Cooperado/Portofolio.razor
@@ -18,7 +18,7 @@
     <br>
     <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-outline-primary" style="position:absolute">Enviar</button>
+                <button type="button" class="btn btn-info" style="position:absolute">Enviar</button>
             </div>
         </div>
     </form> 
