--- a/Pages/Usuario/LoginUser.razor
+++ b/Pages/Usuario/LoginUser.razor
@@ -24,7 +24,7 @@
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-outline-primary">Entrar</button>
+                <button type="button" class="btn btn-info">Entrar</button>
                
             </div>
         </div>
