--- a/Pages/Cooperado/Financeiro.razor
+++ b/Pages/Cooperado/Financeiro.razor
@@ -25,7 +25,7 @@
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
                 <label > Banco </label>
-                <input type="text" name="banco" class="form-control " placeholder="Baco" required="" >    
+                <input type="text" name="banco" class="form-control " placeholder="Banco" required="" >    
             </div>
         </div>   
 
