--- a/Pages/Usuario/CadastroUser.razor
+++ b/Pages/Usuario/CadastroUser.razor
@@ -40,6 +40,13 @@
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
+                <label> Confirme sua senha </label>  
+                <input type="password" name="password" class="form-control" placeholder="Senha Confirmação" required="">
+            </div>
+        </div> 
+
+        <div class="form-group">
+            <div class="col-md-6 offset-md-3">
                 <button type="button" class="btn btn-info">Cadastrar</button>
                
             </div>
