--- a/Features/Cooperado/Cooperado.razor
+++ b/Features/Cooperado/Cooperado.razor
@@ -11,7 +11,7 @@
     <ul class="nav flex-column">
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="cadastro">
-             <span class="oi oi-plus" aria-hidden="true" style="margin-right:10px;"> </span>  PortfolioCadastro
+             <span class="oi oi-plus" aria-hidden="true" style="margin-right:10px;"> </span>  Cadastro de Portfolio
             </NavLink>
     </div>
     <div class="nav-item px-3">
