--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,7 +4,7 @@
   <h1 class="display-3" style="text-align:center">COOPERATIVA XZ</h1>
   
   <hr class="my-4">
-  <p class="lead">OI ANDRÉ</p>
+  <p class="lead">OI ANDRÉ!!</p>
 </div>
 
  <div class="section-tout">
