--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -18,18 +18,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-plus" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
             <NavLink class="nav-link" href="cooperado">
                 <span class="oi oi-person" aria-hidden="true"></span> Cooperado
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="empresa">
+                <span class="oi oi-briefcase" aria-hidden="true"></span> Empresa
+            </NavLink>
+        </li>
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="projeto">
+                <span class="oi oi-project" aria-hidden="true"></span> Projeto
             </NavLink>
         </li>
     </ul>
