--- a/Features/Usuario/CadastroUser.razor
+++ b/Features/Usuario/CadastroUser.razor
@@ -53,7 +53,7 @@
 
             <div class="form-group">
                 <div class="col-md-6 offset-md-3">
-                    <button class="btn btn-info" @onclick="@OnSubmit">
+                    <button class="btn btn-info" @onclick="@CreateUser">
                         Cadastrar
                     </button>
 
