--- a/Features/Usuario/CadastroUser.razor
+++ b/Features/Usuario/CadastroUser.razor
@@ -4,6 +4,7 @@
 @inject NavigationManager navigation
 @using System.Net.Http
 @inject HttpClient Http
+@using JsonConvert
 
 <div class="form-group d-flex justify-content-center">
 
@@ -70,6 +71,7 @@
     ErrorsModel errors = new ErrorsModel();
 
     private async Task CreateUser(){
+        
         var myContent = JsonConvert.SerializeObject(userCredentials);
 
         var buffer = System.Text.Encoding.UTF8.GetBytes(myContent);
