--- a/Features/Projeto/AnaliseProjeto.razor
+++ b/Features/Projeto/AnaliseProjeto.razor
@@ -30,6 +30,67 @@
                 <input type="text" name="valor" class="form-control " placeholder="Digite o valor da Proposta" required="" >    
             </div>
     </div>
+
+    
+      <div class="form-group">
+            <div class="col-md-6 offset-md-3">
+                <label style="text-align:center" > Datas </label>
+                <div class="container">
+                <div class="row">
+                <div class="col-lg-6 col-sm-6">
+                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" required="">
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" required="">
+                </div>
+                </div>
+                </div>
+                <br>
+                <div class="container">
+                <div class="row">
+                <div class="col-lg-6 col-sm-6">
+                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" required="">
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" required="">
+                </div>
+                </div>
+                </div>
+                <br>
+                <div class="container">
+                <div class="row">
+                <div class="col-lg-6 col-sm-6">
+                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" >
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" >
+                </div>
+                </div>
+                </div>
+                <br>
+                <div class="container">
+                <div class="row">
+                <div class="col-lg-6 col-sm-6">
+                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" >
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" >
+                </div>
+                </div>
+                </div>
+                <br>
+                <div class="container">
+                <div class="row">
+                <div class="col-lg-6 col-sm-6">
+                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" >
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" >
+                </div>
+                </div>
+                </div>
+        </div>
+    </div>
     <div class="form-group">
             <div class="col-md-6 offset-md-3">
                 <button type="button" class="btn btn-info" style="position:absolute">Enviar</button>
