--- a/Features/Projeto/EncaminharProjeto.razor
+++ b/Features/Projeto/EncaminharProjeto.razor
@@ -13,16 +13,10 @@
             </div>
         </div> 
 
-        <div class="form-group">
-        <div class="col-md-6 offset-md-3">
-            <label for="exampleInputFile"style="text-align:center">Faça o Upload da documentação!</label>
-            <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
-        </div>
-        </div>
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <label > Link do projeto BitBucket </label>
+                <label > Link do projeto GitHub </label>
                 <input type="text" name="link" class="form-control " placeholder="Link do Projeto" required="" >    
             </div>
     </div>
