--- a/Pages/Features/Projeto/EncaminharProjeto.razor
+++ b/Pages/Features/Projeto/EncaminharProjeto.razor
@@ -17,7 +17,7 @@
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
                 <label > Link do projeto GitHub </label>
-                <input type="text" name="link" class="form-control " placeholder="Link do Projeto" required="" >    
+                <input type="text" name="putLink" class="form-control " placeholder="Link do Projeto" required="" >    
             </div>
     </div>
     <div class="form-group">
