--- a/Pages/Features/Projeto/Avaliacao.razor
+++ b/Pages/Features/Projeto/Avaliacao.razor
@@ -10,7 +10,7 @@
 
         <div class="form-group"style="margin-top:25px;">
             <div class="col-md-6 offset-md-3">
-                <label > Como foi o relacionamento com a equipe? </label>
+                <label > Como foi o relacionamento da equipe? </label>
                 <div class="form-group">
                     <select class="custom-select">
                         <option selected="">Selecione</option>
@@ -27,7 +27,7 @@
 
         <div class="form-group"style="margin-top:25px;">
             <div class="col-md-6 offset-md-3">
-                <label > O que achou da organização? </label>
+                <label > Como foi a organização da equipe? </label>
                 <div class="form-group">
                     <select class="custom-select">
                         <option selected="">Selecione</option>
@@ -43,23 +43,7 @@
 
         <div class="form-group"style="margin-top:25px;">
             <div class="col-md-6 offset-md-3">
-                <label > Como foi a Liderança?  </label>
-                <div class="form-group">
-                    <select class="custom-select">
-                        <option selected="">Selecione</option>
-                        <option value="Otímo">Otímo</option>
-                        <option value="Bom">Bom</option>
-                        <option value="Regular">Regular</option>
-                        <option value="Ruim">Ruim</option>
-                        <option value="Ruim">Não Houve</option>
-                    </select>
-                </div>
-            </div>
-        </div>    
-
-        <div class="form-group"style="margin-top:25px;">
-            <div class="col-md-6 offset-md-3">
-                <label > Era Pró ativo? </label>
+                <label > Os membros eram pró ativos? </label>
                 <div class="form-group">
                     <select class="custom-select">
                         <option selected="">Selecione</option>
@@ -72,20 +56,7 @@
 
         <div class="form-group"style="margin-top:25px;">
             <div class="col-md-6 offset-md-3">
-                <label > Tinha Ética? </label>
-                <div class="form-group">
-                    <select class="custom-select">
-                        <option selected="">Selecione</option>
-                        <option value="Sim">Sim</option>
-                        <option value="Não">Não</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group"style="margin-top:25px;">
-            <div class="col-md-6 offset-md-3">
-                <label > Qual foi o desempenho? </label>
+                <label > Qual foi o desempenho da equipe? </label>
                 <div class="form-group">
                     <select class="custom-select">
                         <option selected="">Selecione</option>
@@ -99,12 +70,6 @@
             </div>
         </div>
 
-        <div class="form-group"style="margin-top:25px;">
-            <div class="col-md-6 offset-md-3">
-                <label > Funções Exercidas </label>
-                <input type="text" name="funcoes" class="form-control " placeholder="Digite as funções exercidas." required="Favor preencher o campo E-mail">    
-            </div>
-        </div>
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
