--- a/Pages/Features/Projeto/AnaliseProjeto.razor
+++ b/Pages/Features/Projeto/AnaliseProjeto.razor
@@ -1,101 +1,131 @@
 @page "/analiseProjeto"
+@using CooperativaXZ
+@using System.Net.Http
+@using Newtonsoft.Json
+@using System.Net.Http.Headers;
+@inject NavigationManager navigation
+@inject HttpClient Http
 
 <div class="form-group d-flex justify-content-center">
 
-<div class="container">
-    <br>
-    <h1 class="display"style="text-align:center">Análise de Projeto</h1>
-    <br>
-    <form> 
-    <div class="col-md-6 offset-md-3">
-    <div class="card border-secondary mb-3" style="max-width: 30rem;">
-    <div class="card-header"style="text-align:center">Nome do Projeto</div>
-    <div class="card-body">
-    <p class="card-text">Descrição do projeto...</p>
-    </div>
-    </div>
-    </div>
-
-    <div class="col-md-6 offset-md-3">
-      
-    </div>
-     <div class="col-md-6 offset-md-3" style="margin-top:25px;">
-         <label for="text" style="text-align:center">Análise realizada</label>
-      <textarea class="form-control" id="exampleTextarea" rows="5" placeholder="Escreva o que acha sobre o Projeto!"></textarea>
-    </div>  
-    <br>
-    <div class="form-group">
+    <div class="container">
+        <br>
+        <h1 class="display" style="text-align:center">Análise de Projeto</h1>
+        <br>
+        <EditForm Model="project" OnValidSubmit="@OnSubmit">
             <div class="col-md-6 offset-md-3">
-                <label style="text-align:center" > Valor da Proposta </label>
-                <input type="text" name="valor" class="form-control " placeholder="Digite o valor da Proposta" required="" >    
+                <div class="card border-secondary mb-3" style="max-width: 30rem;">
+                    <div class="card-header" style="text-align:center">Nome do Projeto</div>
+                    <div class="card-body">
+                        <p class="card-text">Descrição do projeto...</p>
+                    </div>
+                </div>
             </div>
-    </div>
 
-    
-      <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <label style="text-align:center" > Datas </label>
-                <div class="container">
-                <div class="row">
-                <div class="col-lg-6 col-sm-6">
-                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" required="">
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" required="">
-                </div>
-                </div>
-                </div>
-                <br>
-                <div class="container">
-                <div class="row">
-                <div class="col-lg-6 col-sm-6">
-                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" required="">
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" required="">
-                </div>
-                </div>
-                </div>
-                <br>
-                <div class="container">
-                <div class="row">
-                <div class="col-lg-6 col-sm-6">
-                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" >
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" >
-                </div>
-                </div>
-                </div>
-                <br>
-                <div class="container">
-                <div class="row">
-                <div class="col-lg-6 col-sm-6">
-                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" >
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" >
-                </div>
-                </div>
-                </div>
-                <br>
-                <div class="container">
-                <div class="row">
-                <div class="col-lg-6 col-sm-6">
-                    <input type="text" name="name" class="form-control " placeholder="Nome da entrega" >
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <input type="datetime" name="date" class="form-control " placeholder="Adicione a data" >
-                </div>
-                </div>
-                </div>
-        </div>
-    </div>
-    <div class="form-group">
-            <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-info" style="position:absolute">Enviar</button>
+
             </div>
-        </div>
-    </form> 
+            <div class="col-md-6 offset-md-3" style="margin-top:25px;">
+                <label for="text" style="text-align:center">Análise realizada</label>
+                <InputTextArea class="form-control" id="exampleTextarea" rows="5" placeholder="Escreva o que acha sobre o Projeto!"></InputTextArea>
+            </div>
+            <br>
+            <div class="form-group">
+                <div class="col-md-6 offset-md-3">
+                    <label style="text-align:center"> Valor da Proposta </label>
+                    <InputText type="text" name="valor" class="form-control " placeholder="Digite o valor da Proposta" required=""/>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-6 offset-md-3">
+                    <label style="text-align:center"> Datas </label>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="text" name="name" class="form-control " placeholder="Nome da entrega" required=""/>
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="datetime" name="date" class="form-control " placeholder="Adicione a data" required=""/>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="text" name="name" class="form-control " placeholder="Nome da entrega" required=""/>
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="datetime" name="date" class="form-control " placeholder="Adicione a data" required=""/>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="text" name="name" class="form-control " placeholder="Nome da entrega"/>
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="datetime" name="date" class="form-control " placeholder="Adicione a data"/>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="text" name="name" class="form-control " placeholder="Nome da entrega"/>
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="datetime" name="date" class="form-control " placeholder="Adicione a data"/>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="text" name="name" class="form-control " placeholder="Nome da entrega"/>
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <InputText type="datetime" name="date" class="form-control " placeholder="Adicione a data"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-6 offset-md-3">
+                    <button type="submit" class="btn btn-info" style="position:absolute">Enviar</button>
+                </div>
+            </div>
+        </EditForm>
+    </div>
 </div>
-</div>
+
+@code{
+
+    private Project project { get; set; } = new Project();
+
+    private async Task OnSubmit()
+    {
+        var myContent = JsonConvert.SerializeObject(project);
+
+        var buffer = System.Text.Encoding.UTF8.GetBytes(myContent);
+        var byteContent = new ByteArrayContent(buffer);
+
+        byteContent.Headers.ContentType = new MediaTypeHeaderValue("application/json");
+
+        var response = await Http.PostAsync("http://localhost:3000/member", byteContent);
+
+        if (!response.IsSuccessStatusCode)
+        {
+            var res = response.RequestMessage.Content.ReadAsStringAsync();
+        }
+
+    }
+
+}
