--- a/Pages/Features/Projeto/Projeto.razor
+++ b/Pages/Features/Projeto/Projeto.razor
@@ -10,33 +10,41 @@
 <div class="NavMenuCssClass">
     <ul class="nav flex-column">
     <div class="nav-item px-3">
-            <NavLink class="nav-link" href="analiseProjeto">
-             <span class="oi oi-plus" aria-hidden="true" style="margin-right:10px;"> </span>  Análise de Projeto 
+            <NavLink class="nav-link" href="projeto/cadastroProjeto">
+             <span class="oi oi-plus" aria-hidden="true" style="margin-right:10px;"> </span>  Cadastro Projeto
             </NavLink>
     </div>
     <div class="nav-item px-3">
-            <NavLink class="nav-link" href="avaliacao">
-             <span class="oi oi-book" aria-hidden="true" style="margin-right:10px;"> </span>  Avaliacao
+            <NavLink class="nav-link" href="projeto/feedProjeto">
+             <span class="oi oi-project" aria-hidden="true" style="margin-right:10px;"> </span>  Projetos 
+            </NavLink>
+    </div>
+
+    <div class="nav-item px-3">
+            <NavLink class="nav-link" href="projeto/analiseProjeto">
+             <span class="oi oi-question-mark" aria-hidden="true" style="margin-right:10px;"> </span>  Análise de Projeto 
             </NavLink>
     </div>
     <div class="nav-item px-3">
-            <NavLink class="nav-link" href="cadastroProjeto">
-             <span class="oi oi-dollar" aria-hidden="true" style="margin-right:10px;"> </span>  Cadastro Projeto
+            <NavLink class="nav-link" href="projeto/criarEquipe">
+            <span class="oi oi-text" aria-hidden="true" style="margin-right:10px;"> </span>  Criar Equipe
             </NavLink>
     </div>
     <div class="nav-item px-3">
-            <NavLink class="nav-link" href="comentProjeto">
+            <NavLink class="nav-link" href="projeto/avaliacao">
+             <span class="oi oi-book" aria-hidden="true" style="margin-right:10px;"> </span>  Avaliacão de Equipe
+            </NavLink>
+    </div>
+   
+    <div class="nav-item px-3">
+            <NavLink class="nav-link" href="projeto/comentProjeto">
             <span class="oi oi-pencil" aria-hidden="true" style="margin-right:10px;"> </span>  Comentário do Projeto
             </NavLink>
     </div>
-    <div class="nav-item px-3">
-            <NavLink class="nav-link" href="criarEquipe">
-            <span class="oi oi-project" aria-hidden="true" style="margin-right:10px;"> </span>  Criar Equipe
-            </NavLink>
-    </div>
+    
      <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Datas">
-             <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Datas
+            <NavLink class="nav-link" href="projeto/datas">
+             <span class="oi oi-clock" aria-hidden="true" style="margin-right:10px;"> </span>  Datas
             </NavLink>
     </div>
     <div class="nav-item px-3">
