--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="cooperado">
-                <span class="oi oi-person" aria-hidden="true"></span> Cooperado
+                <span class="oi oi-people" aria-hidden="true"></span> Cooperado
             </NavLink>
         </li>
         <li class="nav-item px-3">
