--- a/Pages/Features/Projeto/Projeto.razor
+++ b/Pages/Features/Projeto/Projeto.razor
@@ -22,7 +22,7 @@
 
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="projeto/analiseProjeto">
-             <span class="oi oi-question-mark" aria-hidden="true" style="margin-right:10px;"> </span>  Análise de Projeto 
+             <span class="oi oi-magnifying-glass" aria-hidden="true" style="margin-right:10px;"> </span>  Análise de Projeto 
             </NavLink>
     </div>
     <div class="nav-item px-3">
